Updated Published Page

--- a/frontEnd/online-CBT-test-for-Computer-Scientist/index.html
+++ b/frontEnd/online-CBT-test-for-Computer-Scientist/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>Welcome to my Index Page</h2>
+   <marquee> <h2>Welcome to my Index Pages</h2></marquee>
 </body>
 </html>
