Added, Login | Registration | Dashboard

--- a/frontEnd/online-CBT-test-for-Computer-Scientist/index.html
+++ b/frontEnd/online-CBT-test-for-Computer-Scientist/index.html
@@ -1,11 +1,175 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Login | CS CBT Portal</title>
+  <link rel="stylesheet" href="../css/style.css" />
+  <style>
+    /* ---------- Login Page Styling ---------- */
+    body {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      min-height: 100vh;
+      background: linear-gradient(135deg, #e8f5e9, #c8e6c9);
+      font-family: 'Segoe UI', Tahoma, sans-serif;
+    }
+
+    .login-container {
+      background: #fff;
+      width: 100%;
+      max-width: 420px;
+      padding: 40px 35px;
+      border-radius: 16px;
+      box-shadow: 0 8px 24px rgba(0, 0, 0, 0.08);
+      text-align: center;
+      animation: fadeIn 0.5s ease-in-out;
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    .login-container h1 {
+      color: #2e7d32;
+      font-size: 26px;
+      margin-bottom: 10px;
+    }
+
+    .login-container p {
+      color: #555;
+      margin-bottom: 25px;
+      font-size: 15px;
+    }
+
+    form {
+      display: flex;
+      flex-direction: column;
+      gap: 18px;
+      text-align: left;
+    }
+
+    label {
+      font-weight: 600;
+      font-size: 14px;
+      margin-bottom: 4px;
+      color: #2e2e2e;
+    }
+
+    input {
+      width: 100%;
+      padding: 12px;
+      font-size: 15px;
+      border: 1.8px solid #cfd8dc;
+      border-radius: 8px;
+      outline: none;
+      transition: border 0.3s ease;
+    }
+
+    input:focus {
+      border-color: #2e7d32;
+      box-shadow: 0 0 0 2px rgba(46, 125, 50, 0.2);
+    }
+
+    .btn {
+      background: #2e7d32;
+      color: #fff;
+      padding: 14px;
+      font-size: 16px;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      font-weight: 600;
+      margin-top: 10px;
+      transition: background 0.3s ease;
+    }
+
+    .btn:hover {
+      background: #256728;
+    }
+
+    .error {
+      color: #c62828;
+      font-size: 14px;
+      text-align: center;
+      display: none;
+      margin-top: 5px;
+    }
+
+    .register-link {
+      margin-top: 20px;
+      font-size: 14px;
+      color: #444;
+    }
+
+    .register-link a {
+      color: #2e7d32;
+      font-weight: bold;
+      text-decoration: none;
+    }
+
+    .register-link a:hover {
+      text-decoration: underline;
+    }
+
+    @media (max-width: 500px) {
+      .login-container {
+        margin: 0 15px;
+        padding: 30px 25px;
+      }
+    }
+  </style>
 </head>
 <body>
-   <marquee> <h2>Welcome to my Index Pages</h2></marquee>
+  <div class="login-container">
+    <h1>🔐 Login to Your Account</h1>
+    <p>Access your dashboard and start your CBT journey</p>
+
+    <form id="loginForm">
+      <div>
+        <label for="email">Email Address</label>
+        <input type="email" id="email" placeholder="example@email.com" required />
+      </div>
+
+      <div>
+        <label for="password">Password</label>
+        <input type="password" id="password" placeholder="********" required />
+      </div>
+
+      <div class="error" id="loginError">⚠️ Invalid email or password</div>
+
+      <button type="submit" class="btn">Login</button>
+    </form>
+
+    <div class="register-link">
+      Don't have an account? <a href="pages/register.html">Create one here</a>
+    </div>
+  </div>
+
+  <script>
+    const loginForm = document.getElementById("loginForm");
+    const loginError = document.getElementById("loginError");
+
+    loginForm.addEventListener("submit", (e) => {
+      e.preventDefault();
+
+      const email = document.getElementById("email").value.trim();
+      const password = document.getElementById("password").value.trim();
+
+      // ✅ Fetch user from localStorage
+      const savedUser = JSON.parse(localStorage.getItem("cs_cbt_user"));
+
+      if (savedUser && savedUser.email === email && savedUser.password === password) {
+        // ✅ Store login status
+        localStorage.setItem("isLoggedIn", "true");
+        alert("✅ Login successful! Redirecting...");
+        window.location.href = "dashboard.html";
+      } else {
+        loginError.style.display = "block";
+      }
+    });
+  </script>
 </body>
 </html>
